--- a/textroulette/templates/base.html
+++ b/textroulette/templates/base.html
@@ -7,7 +7,7 @@
 <meta name="author" content="">
 <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
-<title>Project3 - {% block title %}Home{% endblock %}</title>
+<title>Textroulette - {% block title %}Home{% endblock %}</title>
 
 <!-- Bootstrap core CSS -->
 <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -26,7 +26,7 @@
         <ul class="nav nav-pills pull-right">
             <li class="active"><a href="{% url "home" %}">Home</a></li>
         </ul>
-        <h3 class="text-muted">Project3</h3>
+        <h3 class="text-muted">Textroulette</h3>
     </div>
 
 
@@ -35,7 +35,7 @@
 {% block body %}
 {% endblock body %}
     <div class="footer">
-        <p>&copy; Project3 2013</p>
+        <p>&copy; Textroulette 2013</p>
     </div>
 </div>
 
