--- a/textroulette/templates/main/home.html
+++ b/textroulette/templates/main/home.html
@@ -6,7 +6,7 @@
 {% block body %}
 
 <div class="jumbotron">
-    <h1>Welcome to Project3</h1>
+    <h1>Enter your number to start receiving messages from anyone.</h1>
 </div>
 
 {% endblock body %}
