--- a/textroulette/templates/main/home.html
+++ b/textroulette/templates/main/home.html
@@ -7,7 +7,8 @@
 
 <div class="jumbotron">
     <h3>Enter your number to start receiving messages from anyone.</h3>
-    <form>
+    <form method="post" action="">
+        {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-large btn-primary">Sign Me Up</button>
     </form>
