--- a/textroulette/templates/main/success.html
+++ b/textroulette/templates/main/success.html
@@ -6,7 +6,7 @@
 {% block body %}
 
 <div class="jumbotron">
-    <h3>You have been assigned to another random user. You may begin texting them, and they can now text you.</h3>
+    <h3>You have been assigned to another random user. Start sending text messages to (920) 486-6139, and they can now text you.</h3>
     <p>To stop all messages, reply with STOP . To move on to the next user, reply with NEXT.</p>
 </div>
 
